--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,18 @@ django-bootstrap-v5==1.0.11
 django-compressor==4.5.1
 django-environ==0.12.0
 django-libsass==0.9
+django-livereload-server==0.5.1
+django-sass-processor==1.4.1
 idna==3.10
 libsass==0.23.0
+livereload==2.7.1
 rcssmin==1.1.2
 requests==2.32.3
 rjsmin==1.2.2
 soupsieve==2.6
 sqlparse==0.5.3
+tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+watchdog==6.0.0
