--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap5": "^1.1.9",
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "js-cookie": "^3.0.5"
   }
 }
