--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+debugpy==1.8.12
 defusedxml==0.7.1
 Django==4.2.19
 django-appconf==1.1.0
@@ -9,9 +10,11 @@ django-bootstrap-icons==0.9.0
 django-bootstrap-v5==1.0.11
 django-compressor==4.5.1
 django-environ==0.12.0
+django-htmx==1.22.0
 django-libsass==0.9
 django-livereload-server==0.5.1
 django-sass-processor==1.4.1
+django-widget-tweaks==1.5.0
 idna==3.10
 libsass==0.23.0
 livereload==2.7.1
